<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/buttonContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameAction3"
    android:orientation="vertical">


    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textTimeView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/TIME_Label"
        android:gravity="center"
        android:textSize="50sp" />

    <TableLayout
        android:layout_width="320dp"
        android:layout_height="350dp"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/one_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/two_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/three_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/four_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button5"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/five_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/six_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/seven_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/eight_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button9"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/nine_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/ten_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/eleven_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/twelve_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button13"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/thirteen_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/fourteen_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/button15"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/fifteen_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/button16"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/sixteen_Label"
                android:textStyle="bold"
                android:backgroundTint="#1976D2"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_margin="5dp" />

        </TableRow>

    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/MUIBlue"
        android:background="@drawable/custom_btn_white_15"
        android:text="@string/START_Label"
        app:backgroundTint="@null"
        android:layout_marginBottom="5dp" />


    <Button
        android:id="@+id/finishButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/MUIBlue"
        android:background="@drawable/custom_btn_white_15"
        android:text="@string/FINISH_Label"
        app:backgroundTint="@null"
        android:layout_marginTop="5dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/HomeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="@string/HOME_Label"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_btn_blue_15"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/RetryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="@string/RETRY_Label"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_btn_blue_15"
            app:backgroundTint="@null" />
    </LinearLayout>

</LinearLayout>