<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Score2Fragment"
    android:id="@+id/fragment_container2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <TextView
            android:id="@+id/newScoreText2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/NEWSCORE_Label"
            android:gravity="center"
            android:textSize="35sp"
            android:textColor="#ec5353" />

        <TextView
            android:id="@+id/timeTitle2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/TIME_Label"
            android:gravity="center"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="240dp"
            android:orientation="vertical"
            android:layout_gravity="center">


            <TextView
                android:id="@+id/highScoreText2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/HIGHSCORE_Label"
                android:gravity="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/timeText4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/defaultZeroHour"
                android:gravity="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/timeText5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/defaultZeroHour"
                android:gravity="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/timeText6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/defaultZeroHour"
                android:gravity="center"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="50sp"
            android:layout_marginEnd="50sp">

            <Button
                android:id="@+id/HomeButton2"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textSize="20sp"
                android:text="@string/HOME_Label"
                android:background="@drawable/custom_btn_blue_15"
                app:backgroundTint="@null"
                android:layout_margin="10sp" />

            <Button
                android:id="@+id/RetryButton2"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/RETRY_Label"
                android:background="@drawable/custom_btn_blue_15"
                app:backgroundTint="@null"
                android:layout_margin="10sp" />

            <Button
                android:id="@+id/ResetButton2"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/RESETSCORE_Label"
                android:background="@drawable/custom_btn_red_15"
                app:backgroundTint="@null"
                android:layout_margin="10sp" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>